--- a/project.yml
+++ b/project.yml
@@ -2,8 +2,12 @@ name: CurrentConverter
 options:
   bundleIdPrefix: com.currentconverter
   deploymentTarget:
-    iOS: "13.0"
+    iOS: "14.0"
   xcodeVersion: "16.0"
+packages:
+  SnapKit:
+    url: https://github.com/SnapKit/SnapKit
+    version: 5.7.1
 targets:
   CurrentConverterApp:
     type: application
@@ -11,3 +15,5 @@ targets:
     sources: [CurrencyConverter]
     info:
       path: CurrencyConverter/Info.plist
+    dependencies:
+      - package: SnapKit
