Feature/unit tests (#35)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ CurrencyConverter/Info.plist
 CurrentConverter.xcodeproj
 NetworkManager/Info.plist
 NetworkManager/.swiftpm/
+CurrentConverterAppTests/Info.plist
