--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -1,8 +1,9 @@
 name: Currentcies tests
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -10,7 +11,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    - name: Setup Xcode version
+        uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: 16.1
+    - name: Install Mint
+      run: brew install mint
+    - name: Generate Xcode project
+      run: mint bootstrap && mint run xcodegen
+    - name: Build and test
+      run: xcodebuild test -project CurrentConverter.xcodeproj -scheme CurrentConverter -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
