--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Generate Xcode project
         run: mint bootstrap && mint run xcodegen
       - name: Build and test
-        run: xcodebuild test -project CurrentConverter.xcodeproj -scheme CurrentConverter -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+        run: xcodebuild test -project CurrentConverter.xcodeproj -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
