--- a/project.yml
+++ b/project.yml
@@ -14,6 +14,9 @@ packages:
   Swinject:
     url: https://github.com/Swinject/Swinject.git
     version: 2.9.1
+  Mocker:
+    url: https://github.com/WeTransfer/Mocker
+    version: 3.0.2
   NetworkManager:
     path: NetworkManager
 targets:
@@ -21,7 +24,7 @@ targets:
     settings:
         base:
         #SWIFT_ACTIVE_COMPILATION_CONDITIONS: '$(inherited) USING_DELEGATES'
-        SWIFT_VERSION: 6
+          SWIFT_VERSION: 5 # Since GitHub does not have Xcode 16 for now
     type: application
     platform: iOS
     sources: [CurrencyConverter]
@@ -38,7 +41,8 @@ targets:
     platform: iOS
     sources: [CurrentConverterAppTests]
     dependencies:
-        - target: CurrentConverterApp
+      - target: CurrentConverterApp
+      - package: Mocker
     info:
         path: CurrentConverterAppTests/Info.plist
     
