--- a/project.yml
+++ b/project.yml
@@ -36,6 +36,9 @@ targets:
         - package: Swinject
         - package: NetworkManager
         #- target: NetworkManager
+    postCompileScripts:
+        - script: "mint run swiftlint"
+          name: SwiftLint
   CurrentConverterAppTests:
     type: bundle.unit-test
     platform: iOS
@@ -45,6 +48,9 @@ targets:
       - package: Mocker
     info:
         path: CurrentConverterAppTests/Info.plist
+    postCompileScripts:
+      - script: "mint run swiftlint"
+        name: SwiftLint
     
 
 #  NetworkManager:
