--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Generate Xcode project
         run: mint bootstrap && mint run xcodegen && pod install
       - name: Build and test
-        run: xcodebuild test -project CurrentConverter.xcodeproj -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+        run: xcodebuild test -project CurrentConverter.xcworkspace -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
