--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -17,6 +17,14 @@ jobs:
       - name: Install Mint
         run: brew install mint
       - name: Generate Xcode project
-        run: mint bootstrap && mint run xcodegen && pod install
+        run: mint bootstrap && mint run xcodegen
+      - name: Install Bundler
+        run: gem install bundler
+      - name: Bundle Install
+        run: bundle install
+      - name: CocoaPods
+        run: bundle exec pod install
       - name: Build and test
         run: xcodebuild test -project CurrentConverter.xcworkspace -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+
+
