--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -16,18 +16,13 @@ jobs:
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
-          xcode-version: 15.3
+          xcode-version: 16.1
       - name: Install Mint
         run: brew install mint
-      - name: Generate Xcode project
-        run: mint bootstrap && mint run xcodegen
       - name: Install Bundler
         run: gem install bundler
       - name: Bundle Install
         run: bundle install
-      - name: CocoaPods
-        run: bundle exec pod install
       - name: Build and test
-        run: xcodebuild test -workspace CurrentConverter.xcworkspace -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
-
+        run: bundle exec fastlane test
 
