--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -18,5 +18,13 @@ jobs:
         run: brew install mint
       - name: Generate Xcode project
         run: mint bootstrap && mint run xcodegen
+      - name: Install Bundler
+        run: gem install bundler
+      - name: Bundle Install
+        run: bundle install
+      - name: CocoaPods
+        run: bundle exec pod install
       - name: Build and test
-        run: xcodebuild test -project CurrentConverter.xcodeproj -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+        run: xcodebuild test -project CurrentConverter.xcworkspace -scheme CurrentConverterApp -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+
+
