--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -3,9 +3,6 @@ name: Currentcies tests
 on:
   pull_request:
     branches: [main]
-  push:
-    branches:
-      - feature/ruby
 
 jobs:
   build:
@@ -17,12 +14,5 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
           xcode-version: 16.1
-      - name: Install Mint
-        run: brew install mint
-      - name: Install Bundler
-        run: gem install bundler
-      - name: Bundle Install
-        run: bundle install
-      - name: Build and test
-        run: bundle exec fastlane test
-
+      - name: Setup project
+        run: ./setup.sh
