--- a/project.yml
+++ b/project.yml
@@ -22,6 +22,7 @@ targets:
         base:
         #SWIFT_ACTIVE_COMPILATION_CONDITIONS: '$(inherited) USING_DELEGATES'
           SWIFT_VERSION: 5 # Since GitHub does not have Xcode 16 for now
+          SWIFT_OBJC_BRIDGING_HEADER: "CurrencyConverter/CurrentConverterApp-Bridging-Header.h"
     type: application
     platform: iOS
     sources: [CurrencyConverter]
