--- a/project.yml
+++ b/project.yml
@@ -5,9 +5,6 @@ options:
     iOS: "14.0"
   xcodeVersion: "16.0"
 packages:
-  RealmSwift:
-    url: https://github.com/realm/realm-swift
-    version: 10.54.2
   Swinject:
     url: https://github.com/Swinject/Swinject.git
     version: 2.9.1
@@ -30,7 +27,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen" # Launch screen interface file base name
     dependencies:
-        - package: RealmSwift
+        - carthage: RealmSwift
         - package: Swinject
         #- package: NetworkManager
         #- target: NetworkManager
@@ -52,7 +49,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen"
     dependencies:
-        - package: RealmSwift
+        - carthage: RealmSwift
         - package: Swinject
     postCompileScripts:
         - script: "mint run swiftlint"
@@ -70,7 +67,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen" # Launch screen interface file base name
     dependencies:
-        - package: RealmSwift
+        - carthage: RealmSwift
         - package: Swinject
     postCompileScripts:
         - script: "mint run swiftlint"
