--- a/.github/workflows/currencies_tests.yml
+++ b/.github/workflows/currencies_tests.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Setup project
         run: ./setup.sh
       - name: Build and test
-        run: xcodebuild test -project CurrentConverter.xcworkspace -scheme CurexConverter -destination "platform=iOS Simulator,OS=18.0,name=iPhone 15"
+        run: xcodebuild test -workspace CurrentConverter.xcworkspace -scheme CurexConverter -destination "platform=iOS Simulator,OS=17.5,name=iPhone 15 Pro"
