--- a/project.yml
+++ b/project.yml
@@ -5,6 +5,9 @@ options:
     iOS: "14.0"
   xcodeVersion: "16.0"
 packages:
+  RealmSwift:
+    url: https://github.com/realm/realm-swift
+    version: 10.54.2
   Swinject:
     url: https://github.com/Swinject/Swinject.git
     version: 2.9.1
@@ -27,7 +30,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen" # Launch screen interface file base name
     dependencies:
-        - carthage: RealmSwift
+        - package: RealmSwift
         - package: Swinject
         #- package: NetworkManager
         #- target: NetworkManager
@@ -49,7 +52,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen"
     dependencies:
-        - carthage: RealmSwift
+        - package: RealmSwift
         - package: Swinject
     postCompileScripts:
         - script: "mint run swiftlint"
@@ -67,7 +70,7 @@ targets:
         properties:
           UILaunchStoryboardName: "LaunchScreen" # Launch screen interface file base name
     dependencies:
-        - carthage: RealmSwift
+        - package: RealmSwift
         - package: Swinject
     postCompileScripts:
         - script: "mint run swiftlint"
